--- a/lang/pt.json
+++ b/lang/pt.json
@@ -37,7 +37,7 @@
         "ClickToSearch": "Clique para pesquisar",
         "Copy": "Copiar",
         "Confirm": "Confirmar",
-        "ColumnActionsPerVisit": "Ações por visita",
+        "ColumnActionsPerVisit": "Ações por Visita",
         "ColumnActionsPerVisitDocumentation": "O número médio de ações (visualização de páginas, transferências ou ligações de saída) que foram realizadas durante as visitas.",
         "ColumnAverageGenerationTime": "Tempo médio de renderização",
         "ColumnViewsWithGenerationTime": "Visualizações de página com o tempo de renderização",
@@ -86,11 +86,11 @@
         "ColumnUniqueExits": "Saídas únicas",
         "ColumnUniquePageviews": "Visualizações únicas de páginas",
         "ColumnUniquePageviewsDocumentation": "O número de visitas que incluíram esta página. Se a página foi visualizada múltiplas vezes durante uma visita, é apenas contabilizada uma vez.",
-        "ColumnValuePerVisit": "Rendimento por visita",
+        "ColumnValuePerVisit": "Rendimento por Visita",
         "ColumnViewedAfterSearch": "Clicado nos resultados da pesquisa",
         "ColumnViewedAfterSearchDocumentation": "O número de vezes que esta Página foi visitada depois de um visitante fazer uma pesquisa no seu site e clicou nesta página nos resultados da pesquisa.",
         "ColumnVisitDuration": "Duração da visita (em segundos)",
-        "ColumnVisitsWithConversions": "Visitas com conversões",
+        "ColumnVisitsWithConversions": "Visitas com Conversões",
         "ComputedMetricAverage": "Média de %1$s por %2$s",
         "ComputedMetricAverageDocumentation": "Valor médio de \"%1$s\" por \"%2$s\".",
         "ComputedMetricAverageShortDocumentation": "Valor médio de \"%1$s\".",
@@ -110,8 +110,8 @@
         "ComputedMetricCountWithValueDocumentation": "O número de entradas que têm um valor definido para %s",
         "ConfigFileIsNotWritable": "O ficheiro de configuração do Matomo %1$s não é modificável, as suas alterações podem não ser guardadas. %2$s Por favor altere as permissões do ficheiro de configuração para o mesmo ser modificável.",
         "Continue": "Continuar",
-        "ContinueToPiwik": "Continuar para o Matomo",
-        "CurrentlyUsingUnsecureHttp": "Atualmente está a utilizar o Matomo sob o HTTP inseguro. Isto pode fazer com que o Matomo seja vulnerável à exploração de falhas de segurança. Pode também estar a violar leis de privacidade, dado que algumas funcionalidades, incluindo cookies de exclusão, não irão funcionar. Recomendamos que configure o Matomo para utilizar SSL (HTTPS) para uma segurança melhorada.",
+        "ContinueToPiwik": "Continuar para Matomo",
+        "CurrentlyUsingUnsecureHttp": "Atualmente, está a utilizar o Matomo utilizando um HTTP inseguro. Isto pode fazer com que o Matomo seja vulnerável à exploração de falhas de segurança. Também pode estar a violar as leis de privacidade, dado que algumas funcionalidades, incluindo os <i>cookies<\/i> de exclusão, não irão funcionar. Nós recomendamos que configure o Matomo para utilizar SSL (HTTPS) para uma segurança melhorada.",
         "CreationDate": "Data de criação",
         "CreatedByUser": "criado por %s",
         "CurrentMonth": "Mês atual",
@@ -133,7 +133,10 @@
         "DaysHours": "%1$s dias %2$s horas",
         "DaysSinceFirstVisit": "Dias desde a primeira visita",
         "DaysSinceLastEcommerceOrder": "Dias desde a última encomenda de comércio eletrónico",
+        "SecondsSinceLastEcommerceOrder": "Segundos desde a última encomenda Ecommerce",
         "DaysSinceLastVisit": "Dias desde a última visita",
+        "SecondsSinceLastVisit": "Segundos desde a última visita",
+        "SecondsSinceFirstVisit": "Segundos desde a primeira visita",
         "Default": "Predefinido",
         "DefaultAppended": "(predefinido)",
         "Delete": "Eliminar",
@@ -245,7 +248,7 @@
         "InvalidDateRange": "Intervalo de datas inválido, por favor, tente novamente",
         "InvalidResponse": "Os dados recebidos são inválidos.",
         "IP": "IP",
-        "JsTrackingTag": "Código de acompanhamento JavaScript",
+        "JsTrackingTag": "Código de Monitorização de JavaScript",
         "KpiMetric": "Métrica KPI",
         "Language": "Idioma",
         "Languages": "Idiomas",
@@ -254,15 +257,15 @@
         "LearnMore": "%1$ssaber mais%2$s",
         "Live": "Ao vivo",
         "Loading": "A carregar...",
-        "LoadingData": "A carregar dados...",
+        "LoadingData": "A carregar os dados...",
         "LoadingPopover": "A carregar %s...",
         "LoadingPopoverFor": "A carregar %s para",
         "Locale": "pt_PT.UTF-8",
-        "Logout": "Sair",
+        "Logout": "Terminar sessão",
         "MainMetrics": "Métricas principais",
         "Matches": "Correspondências",
         "MediumToHighTrafficItIsRecommendedTo": "Para site com tráfego médio ou elevado, recomendamos que processe os relatórios de hoje no máximo a cada meia hora (%1$s segundos) ou de hora a hora (%2$s segundos).",
-        "Metadata": "Meta-dados",
+        "Metadata": "Metadados",
         "Metric": "Métrica",
         "Metrics": "Métricas",
         "MetricsToPlot": "Métricas a desenhar",
@@ -308,7 +311,7 @@
         "SmtpFromEmailHelp": "O valor predefinido é noreply@{DOMÍNIO}, onde {DOMÍNIO} será substituído pelo domínio do seu Matomo \"%1$s\".<br>Se o envio de e-mails não funciona para si, pode precisar de alterar este endereço para coincidir com o seu nome SMTP.",
         "NameShownInTheSenderColumn": "O nome apresentado na coluna do remetente",
         "OnlyUsedIfUserPwdIsSet": "Apenas utilizado se um utilizador\/palavra-passe estiver definido; questione o seu fornecedor se não tiver a certeza que método deve utilizar.",
-        "OpenSourceWebAnalytics": "plataforma de análise gratuita\/livre",
+        "OpenSourceWebAnalytics": "plataforma de analítica gratuita\/livre",
         "OperationAtLeast": "Pelo menos",
         "OperationAtMost": "No máximo",
         "OperationContains": "Contém",
@@ -327,22 +330,22 @@
         "OrCancel": "ou %1$s Cancelar %2$s",
         "Others": "Outros",
         "Outlink": "Ligação de saída",
-        "Outlinks": "Ligações de saída",
+        "Outlinks": "Hiperligações de saída",
         "OverlayRowActionTooltip": "Ver os dados de análise diretamente no seu site (abre um novo separador)",
         "OverlayRowActionTooltipTitle": "Abrir sobreposição na página",
-        "Overview": "Visão geral",
+        "Overview": "Sinopse",
         "Pages": "Páginas",
         "Pagination": "%1$s–%2$s de %3$s",
         "PaginationWithoutTotal": "%1$s–%2$s",
         "ParameterMustIntegerBetween": "O parâmetro %1$s tem que ser um valor inteiro entre %2$s e %3$s.",
         "Password": "Palavra-passe",
         "Period": "Período",
-        "Piechart": "Gráfico circular",
+        "Piechart": "Gráfico Circular",
         "Print": "Imprimir",
         "Profiles": "Perfis",
         "MatomoIsACollaborativeProjectYouCanContributeAndDonateNextRelease": "O %1$sMatomo%2$s, anteriormente conhecido por Piwik, é um projeto colaborativo trazido até a si por membros da %7$sequipa do Matomo%8$s bem como por muitos outros colaboradores à volta do mundo. <br\/> Se é um fã do Matomo, pode ajudar: saiba %3$scomo participar no Matomo%4$s, ou %5$sfaça um donativo agora%6$s para ajudar a financiar o próximo excelente lançamento do Matomo!",
         "PiwikXIsAvailablePleaseNotifyPiwikAdmin": "%1$s está disponível. Por favor, notifique o %2$sadministrador do Matomo%3$s.",
-        "PiwikXIsAvailablePleaseUpdateNow": "O Matomo %1$s está disponível. %2$s Por favor atualize agora!%3$s (consulte as %4$s alterações%5$s).",
+        "PiwikXIsAvailablePleaseUpdateNow": "Está disponível Matomo %1$s. %2$s Por favor, atualize agora!%3$s (consulte as %4$s alterações%5$s).",
         "PleaseContactYourPiwikAdministrator": "Por favor, contacte o seu administrador do Matomo.",
         "PleaseSpecifyValue": "Por favor, especifique um valor para '%s'.",
         "PleaseUpdatePiwik": "Por favor, atualize o seu Matomo",
@@ -365,7 +368,7 @@
         "Recommended": "Recomendado",
         "RecordsToPlot": "Registos para desenhar",
         "Refresh": "Atualizar",
-        "RefreshPage": "Atualizar a página",
+        "RefreshPage": "Recarregar a página",
         "RelatedReport": "Relatório relacionado",
         "RelatedReports": "Relatórios relacionados",
         "Remove": "Remover",
@@ -377,7 +380,7 @@
         "RearchiveTimeIntervalOnlyForTodayReports": "Isto apenas afeta relatórios para hoje (ou qualquer outro intervalo de datas, incluindo hoje)",
         "ReportsWillBeProcessedAtMostEveryHour": "Desta forma os relatórios serão processados, no máximo, a cada hora.",
         "RequestTimedOut": "Um pedido de dados a %s expirou. Por favor tente novamente.",
-        "Required": "%s necessário",
+        "Required": "%s requerido",
         "Required2": "Obrigatório",
         "ReturningVisitor": "Visitante recorrente",
         "ReturningVisitorAllVisits": "Ver todas as visitas",
@@ -413,7 +416,7 @@
         "Subtotal": "Subtotal",
         "Summary": "Resumo",
         "Table": "Tabela",
-        "TagCloud": "Nuvem de etiquetas",
+        "TagCloud": "Nuvem de Etiquetas",
         "Tax": "Imposto",
         "TimeAgo": "há %s",
         "TimeFormat": "Formato horário",
@@ -441,7 +444,7 @@
         "UseSMTPServerForEmail": "Utilizador servidor SMTP para e-mail",
         "Value": "Valor",
         "VBarGraph": "Gráfico de barras verticais",
-        "View": "Vista",
+        "View": "Ver",
         "ViewDocumentationFor": "Ver documentação para %1$s",
         "Visit": "Visita",
         "VisitId": "ID da visita",
@@ -456,7 +459,7 @@
         "Visitors": "Visitantes",
         "VisitsWith": "Visitas com %s",
         "VisitorFingerprint": "Impressão digital",
-        "VisitorSettings": "Definições do visitante",
+        "VisitorSettings": "Definições de Visitante",
         "VisitType": "Tipo de visita",
         "VisitTypes": "Tipos de visita",
         "VisitTypeExample": "Por exemplo, para selecionar todos os visitantes que voltaram ao site, incluindo aqueles que compraram algo nas visitas anteriores, o pedido API devia conter %s",
@@ -483,7 +486,7 @@
         "WarningFileIntegrityNoMd5file": "A verificação da integridade dos ficheiros não pode ser concluída devido à falta da função md5_file().",
         "WarningPasswordStored": "%1$sAviso:%2$s Esta palavra-passe será guardada no ficheiro de configuração, visível para qualquer pessoa que o possa aceder.",
         "WarningDebugOnDemandEnabled": "O modo de acompanhamento %1$s está ativo. Por questões de segurança isto apenas deve estar ativo por um pequeno período de tempo. Para o desativar defina %2$s para %3$s no %4$s",
-        "Website": "Site",
+        "Website": "Site da Web",
         "Weekly": "Semanalmente",
         "WeeklyReport": "semanalmente",
         "WeeklyReports": "Relatórios semanais",
@@ -514,7 +517,9 @@
         "MaximumNumberOfSegmentsComparedIs": "%s é o número máximo de segmentos que podem ser comparados em simultâneo.",
         "CompareDatesParamMustMatchComparePeriods": "O tamanho do parâmetro %1$s deve coincidir com o tamanho do parâmetro %2$s.",
         "MaximumNumberOfPeriodsComparedIs": "%s é o número máximo de períodos que podem ser comparados em simultâneo.",
-        "Custom": "Personalizada"
+        "Custom": "Personalizada",
+        "PreviousPeriod": "Período Anterior",
+        "PreviousYear": "Ano Anterior"
     },
     "Mobile": {
         "AboutPiwikMobile": "Sobre o Matomo Mobile",
