--- a/plugins/Actions/lang/pt.json
+++ b/plugins/Actions/lang/pt.json
@@ -1,39 +1,40 @@
 {
     "Actions": {
         "AvgGenerationTimeTooltip": "Média com base em %1$s acesso(s) %2$sentre %3$s e %4$s",
-        "ColumnClickedURL": "Ligação de saída clicada",
+        "ColumnClickedURL": "Hiperligação de Saída Clicada",
         "ColumnClickedURLs": "Ligações de saída clicadas",
         "ColumnActionURL": "Endereço da ação",
         "ColumnClicks": "Cliques",
-        "ColumnClicksDocumentation": "O número de vezes que esta ligação foi clicada.",
-        "ColumnDownloadURL": "Endereço da transferência",
-        "ColumnDownloadURLs": "Endereços das transferências",
-        "ColumnEntryPageTitle": "Título da página de entrada",
-        "ColumnEntryPageURL": "Endereço da página de entrada",
+        "ColumnClicksDocumentation": "O número de vezes que esta hiperligação foi clicada.",
+        "ColumnDownloadURL": "URL de Transferência",
+        "ColumnDownloadURLs": "URLs de Transferência",
+        "ColumnEntryPageTitle": "Título da Página de Entrada",
+        "ColumnEntryPageURL": "URL da Página de Entrada",
         "ColumnEntryPageURLs": "Endereços das páginas de entrada",
-        "ColumnExitPageTitle": "Título da página de saída",
-        "ColumnExitPageURL": "Endereço da página de saída",
+        "ColumnExitPageTitle": "Título da Página de Saída",
+        "ColumnExitPageURL": "URL da Página de Saída",
         "ColumnExitPageURLs": "Endereços das páginas de saída",
-        "ColumnNoResultKeyword": "Palavra-chave sem resultados de pesquisa",
-        "ColumnPageName": "Nome da página",
-        "ColumnPagesPerSearch": "Páginas de resultados de pesquisa",
-        "ColumnPagesPerSearchDocumentation": "Os visitantes irão pesquisar no seu site e, às vezes, clicar em \"seguinte\" para ver mais resultados. Este é o número médio de páginas de resultados de pesquisa vistas para esta palavra-chave.",
-        "ColumnPageURL": "Endereço da página",
-        "ColumnSearchCategory": "Categoria de pesquisa",
+        "ColumnNoResultKeyword": "Palavra-chave sem Resultados de Pesquisa",
+        "ColumnPageName": "Nome da Página",
+        "ColumnPagesPerSearch": "Páginas dos Resultados de Pesquisa",
+        "ColumnPagesPerSearchDocumentation": "Os visitantes irão pesquisar no seu <i>site<\/i> da Web, e às vezes clicam em \"seguinte\" para ver mais resultados. Este é o número médio das páginas dos resultados de pesquisa visualizados para esta palavra-chave.",
+        "ColumnPageURL": "URL da Página",
+        "ColumnSearchCategory": "Categoria de Pesquisa",
         "ColumnSearches": "Pesquisas",
-        "ColumnSearchesDocumentation": "O número de visitas que pesquisaram por esta palavra-chave no motor de pesquisa do seu site.",
+        "ColumnSearchesDocumentation": "O número de visitas que pesquisaram por esta palavra-chave no motor de pesquisa do seu <i>site<\/i> da Web.",
         "ColumnSearchExits": "%% saídas de pesquisa",
-        "ColumnSearchExitsDocumentation": "A percentagem de visitas que deixou o site depois de pesquisar por esta palavra-chave no motor de pesquisa do seu Site.",
-        "ColumnSearchResultsCount": "Contagem dos resultados da pesquisa",
-        "ColumnSiteSearchKeywords": "Palavras-chave únicas",
-        "ColumnUniqueClicks": "Cliques únicos",
+        "ColumnSearchExitsDocumentation": "A percentagem das visitas que sairam do <i>site<\/i> da Web depois de pesquisarem por esta palavra-chave no seu motor de «Pesquisa do Site».",
+        "ColumnSearchResultsCount": "Contagem dos Resultados da Pesquisa",
+        "ColumnSiteSearchKeywords": "Palavras-chave Únicas",
+        "ColumnUniqueClicks": "Cliques Únicos",
         "ColumnUniqueClicksDocumentation": "O número de visitas que envolveu um clique nesta ligação. Se uma ligação foi clicada várias vezes durante uma visita, só é contabilizada uma vez.",
-        "ColumnUniqueDownloads": "Transferências únicas",
-        "ColumnUniqueOutlinks": "Ligações de saída únicas",
+        "ColumnUniqueDownloads": "Transferências Únicas",
+        "ColumnUniqueOutlinks": "Hiperligações de Saída Únicas",
         "ColumnIdPageview": "ID da visualização de página",
         "ColumnInteractionPosition": "Posição da interação",
+        "ColumnPageViewPosition": "Posição da Visualização de Página",
         "ActionsInVisit": "Ações na visita",
-        "DownloadsReportDocumentation": "Neste relatório, pode ver quais os ficheiros que os visitantes transferiram.%s O Matomo contabiliza como uma transferência cada clique numa ligação de transferência. Se transferência foi concluída ou não, não é conhecido pelo Matomo.",
+        "DownloadsReportDocumentation": "Neste relatório, pode ver quais os ficheiros que os visitantes transferiram.%s O que Matomo conta como uma transferência é o clique numa hiperligação de transferência. Se a transferência foi concluída ou não, Matomo não tem conhecimento.",
         "EntryPagesReportDocumentation": "Este relatório contém informação sobre as páginas de entrada que foram utilizadas durante o período especificado, Uma página de entrada é a primeira página que um utilizador vê durante a sua visita. %s Os endereços de entrada são apresentados numa estrutura de pastas.",
         "EntryPageTitles": "Títulos das páginas de entrada",
         "EntryPageTitlesReportDocumentation": "Este relatório contém informações sobre os títulos das páginas de entrada que foram utilizados ​​durante o período especificado.",
@@ -47,7 +48,7 @@
         "PageTitlesReportDocumentation": "Este relatório contém informação sobre os títulos das páginas que foram visitadas. %1$s O título de página é a tag HTML %2$s que a maioria dos navegadores mostra como título respetiva janela.",
         "PageUrls": "Endereços de páginas",
         "PageViewsByVisitor": "O número de vezes que esta página foi vista por este visitante em todas as visitas",
-        "PluginDescription": "Relatórios sobre visualizações e títulos de páginas. Permite-lhe avaliar o motor de pesquisa interno do seu site. Acompanha automaticamente cliques em ligações externas e transferências de ficheiros.",
+        "PluginDescription": "Relatórios sobre as visualizações e títulos das páginas. Permite-lhe avaliar o motor de pesquisa interno do seu <i>site<\/i> da Web. Monitoriza automaticamente os cliques nas hiperligações externas e transferências de ficheiro.",
         "RevisitedPages": "Páginas vistas mais do que uma vez",
         "SiteSearchCategories1": "Este relatório lista as Categorias que os visitantes selecionaram quando realizaram uma Pesquisa no seu site.",
         "SiteSearchCategories2": "Por exemplo, os sites de comércio eletrónico têm tipicamente um seletor de \"Categoria\" de modo a que os visitantes possam restringir as suas pesquisas a todos os produtos de uma categoria específica.",
@@ -55,14 +56,16 @@
         "SiteSearchIntro": "O acompanhamento das pesquisas que os visitantes fazem no seu site é uma maneira muito eficaz de saber mais sobre o que o seu público está à procura, pode ajudar a encontrar ideias para novos conteúdos, novos produtos de comércio eletrónico que os potenciais clientes podem estar à procura e, em geral, melhorar a experiência do seu site para os visitantes.",
         "SiteSearchCategory": "Categoria (pesquisa do site)",
         "SiteSearchCategories": "Categorias (pesquisa do site)",
-        "SiteSearchKeyword": "Palavra-chave (pesquisa do site)",
+        "SiteSearchKeyword": "Palavra-chave (Pesquisa do Site)",
         "SiteSearchKeywords": "Palavras-chave (pesquisa do site)",
-        "SiteSearchKeywordsDocumentation": "Este relatório lista as palavras-chave de pesquisa que os visitantes procuraram no seu motor de pesquisa interno.",
-        "SiteSearchKeywordsNoResultDocumentation": "Este relatório lista as palavras-chave de pesquisa que não devolveram qualquer resultado de pesquisa: talvez o algoritmo do motor de pesquisa possa ser melhorado ou, talvez, os seus visitantes estejam à procura de conteúdo que (ainda) não existe no seu site?",
+        "SiteSearchKeywordCount": "Contagem de palavra-chave (Pesquisa de Site)",
+        "SiteSearchKeywordCounts": "Contagens de palavra-chave (Pesquisa de Site)",
+        "SiteSearchKeywordsDocumentation": "Este relatório lista as «Palavras-chave de Pesquisa» que os visitantes procuraram no seu «Motor de Pesquisa» interno.",
+        "SiteSearchKeywordsNoResultDocumentation": "Este relatório lista as «Palavras-chave de Pesquisa» que não devolveram qualquer resultado de «Pesquisa»: talvez o algoritmo do motor de pesquisa possa ser melhorado, ou talvez, os seus visitantes estejam à procura de conteúdo que (ainda) não existe no seu <i>site<\/i> da Web?",
         "SubmenuPagesEntry": "Páginas de entrada",
         "SubmenuPagesExit": "Páginas de saída",
         "SubmenuPageTitles": "Títulos das páginas",
-        "SubmenuSitesearch": "Pesquisa do site",
+        "SubmenuSitesearch": "Pesquisa do Site",
         "WidgetEntryPageTitles": "Títulos de páginas de entrada",
         "WidgetExitPageTitles": "Títulos de páginas de saída",
         "WidgetPagesEntry": "Páginas de entrada",
