--- a/plugins/Contents/lang/pt.json
+++ b/plugins/Contents/lang/pt.json
@@ -5,12 +5,12 @@
         "ContentImpression": "Impressão de conteúdo",
         "ContentInteraction": "Interação de conteúdo",
         "ContentInteractions": "Interações de conteúdo",
-        "InteractionRate": "Taxa de interação",
-        "ContentName": "Nome do conteúdo",
+        "InteractionRate": "Taxa de Interação",
+        "ContentName": "Nome do Conteúdo",
         "ContentNames": "Nomes do conteúdo",
-        "ContentPiece": "Pedaço de conteúdo",
+        "ContentPiece": "Parte de Conteúdo",
         "ContentPieces": "Pedaços de conteúdo",
-        "ContentTarget": "Conteúdo-alvo",
+        "ContentTarget": "Conteúdo de Destino",
         "ContentTargets": "Conteúdos-alvo",
         "Contents": "Conteúdos",
         "InteractionsMetricDocumentation": "O número de interações num bloco de conteúdo (por exemplo, um 'clique' num banner ou publicidade)",
