--- a/plugins/CorePluginsAdmin/lang/cs.json
+++ b/plugins/CorePluginsAdmin/lang/cs.json
@@ -49,6 +49,7 @@
         "NotDownloadable": "Není ke stažení",
         "PluginNotDownloadable": "Zásuvný modul není ke stažení.",
         "PluginNotDownloadablePaidReason": "Možné důvody jsou vypršená, či překročená licence.",
+        "PluginRequiresInternet": "Tento plugin vyžaduje funkční připojení k internetu. Pokud chcete tuto funkci použít, zkontrolujte hodnotu `enable_internet_features` v konfiguračním souboru.",
         "PluginActivated": "Modul aktivován",
         "Status": "Stav",
         "SuccessfullyActicated": "Úspěšně jste aktivovali <strong>%s<\/strong>.",
@@ -56,6 +57,24 @@
         "TeaserExtendPiwikByPlugin": "Rozšiřte Matomo o %1$sinstalací zásuvného module z tržiště %2$s nebo %3$snahrajte zásuvný modul ve formátu .zip%4$s.",
         "TeaserExtendPiwikByTheme": "Užijte si nový vzhled po %1$sinstalaci nového vzhledu%2$s.",
         "InstallingNewPluginViaMarketplaceOrUpload": "Můžete zásuvný modul nainstalovat automaticky z obchodu, %1$snebo ho nahrát%2$s ve formátu .zip.",
+        "TagManagerNowAvailableTitle": "Správce značek Matomo je nyní k dispozici",
+        "TagManagerNowAvailableSubtitle": "Spravujte snadno všechny své značky prostřednictvím jedné platformy, abyste získali potřebné informace, příležitosti jsou nekonečné!",
+        "ActivateTagManagerNow": "Aktivujte nyní správce značek",
+        "TagManagerEmailSuperUserToActivate": "Odešlete email Super uživatelům k aktivování této nové funkce",
+        "TagManagerTeaserHideSuperUser": "Nezobrazovat tuto stránku žádnému uživateli",
+        "TagManagerTeaserHideNonSuperUser": "Nezajímá mě to, již tuto stránku znovu nezobrazovat",
+        "TagManagerTeaserEmailSuperUserBody": "Ahoj, %1$sMatomo Správce značek je nyní k dispozici v Matomo a rád bych tuto novou funkci použil. Protože máte přístup superuživatele, můžete tuto funkci aktivovat prostřednictvím stránky Správce značek v horním menu? %2$sMatomo URL je %3$s. %4$sDěkuji",
+        "WhatIsTagManager": "Co je Správce značek?",
+        "WhatIsTagManagerDetails1": "Podobně jako vám systém správy obsahu (CMS) přináší veškerou flexibilitu k publikování obsahu na vašem webu bez technických znalostí HTML \/ CSS, systém správy značek (TMS) je vaším cílem zjednodušit proces vkládání jako první a značky sledování aplikací třetích stran (známé také jako úryvky nebo pixely) na vašem webu.",
+        "WhatIsTagManagerDetails2": "Řekněme, že chcete vidět výsledky vašich konverzí \/ cílů, registrace k odběru novinek, sociálních widgetů, vyskakovacích oken a remarketingových kampaní; to, co bylo kdysi vysoce technickým a časově náročným procesem, je nyní v TMS snadno proveditelné a implementace vyžaduje jen několik kliknutí.",
+        "TagManagerLearnMoreInUserGuide": "Další informace naleznete v Uživatelské příručce Správce značek",
+        "WhyUsingATagManager": "Proč Správce značek?",
+        "WhyUsingATagManagerDetails1": "Správce značek vám usnadní život! Už nemusíte čekat na vývojáře, abyste na svém webu upravili úryvky první nebo třetí strany, protože Správce značek vám dává možnost provést tyto změny a nasadit je na váš web.",
+        "WhyUsingATagManagerDetails2": "Nemohlo to nikdy být pohodlnější a nejen že to umožňuje rychlejší uvedení změn na trh, ale také snížení nákladů.",
+        "WhyUsingATagManagerDetails3": "Díky tomu budou marketingové týmy, digitální a IT týmy šťastní ... Je to výhodné pro všechny!",
+        "AreThereAnyRisks": "Existují nějaká rizika?",
+        "AreThereAnyRisksDetails1": "Když aktivujete Správce značek, uživatelé s přístupem pro správce budou moci vytvářet vlastní značky HTML, spouštěče a proměnné, které mohou na vašem webu spustit JavaScript. Tyto vlastní šablony by mohly být zneužity k odcizení například citlivých informací od návštěvníků vašeho webu (známých jako %1$sXSS%2$s).",
+        "AreThereAnyRisksDetails2": "Po aktivaci Správce značek můžete zakázat tyto vlastní šablony v části „Správa => Obecná nastavení“. Použití těchto šablon můžete také omezit pouze na konkrétní uživatele nebo super uživatele.",
         "Theme": "Šablona",
         "Themes": "Šablony",
         "ThemesDescription": "Šablony mohou změnit vzhled uživatelského rozhraní Matomou a přinést nový zážitek z vašich analytických hlášení.",
@@ -64,6 +83,7 @@
         "Version": "Verze",
         "ViewAllMarketplacePlugins": "Zobrazit všechny zásuvné moduly v marketplace zásuvných modulů",
         "WeCouldNotLoadThePluginAsItHasMissingDependencies": "Zásuvný modul %1$s nelze načíst, protože chybí závislosti: %2$s",
-        "Websites": "Stránky"
+        "Websites": "Stránky",
+        "UpdateSelected": "Aktualizace byla vybrána"
     }
 }
