--- a/plugins/DevicesDetection/lang/id.json
+++ b/plugins/DevicesDetection/lang/id.json
@@ -28,6 +28,7 @@
         "Smartphone": "Telepon pintar",
         "Devices": "Perangkat",
         "TV": "Tv",
+        "MobileApp": "Aplikasi Mobil",
         "WidgetBrowsers": "Peramban Pengunjung",
         "WidgetBrowsersDocumentation": "Laporan ini mengandung informasi tentabg jenis peramban yang pengunjung Anda gunakan. Setiap versi peramban diurutkan terpisah."
     }
