--- a/plugins/DevicesDetection/lang/it.json
+++ b/plugins/DevicesDetection/lang/it.json
@@ -47,6 +47,11 @@
         "Phablet": "Phablet",
         "TV": "Apparecchio TV",
         "UserAgent": "User-Agent",
+        "Library": "Libreria",
+        "FeedReader": "Lettore di Feed",
+        "MobileApp": "App Mobile",
+        "Pim": "PIM",
+        "MediaPlayer": "Media Player",
         "XVisitsFromDevices": "%1$s visite da %2$s dispositivi",
         "Wearable": "Indossabile",
         "WidgetBrowsers": "Browser dei visitatori",
