--- a/plugins/DevicesDetection/lang/pl.json
+++ b/plugins/DevicesDetection/lang/pl.json
@@ -43,6 +43,7 @@
         "Phablet": "Phablet",
         "TV": "TV",
         "UserAgent": "User-Agent",
+        "MobileApp": "Aplikacja mobilna",
         "XVisitsFromDevices": "%1$s wizyt z %2$s urządzeń",
         "WidgetBrowsers": "Przeglądarki odwiedzających",
         "WidgetBrowsersDocumentation": "Ten raport zawiera informacje o rodzajach przeglądarek używanych przez Twoich odwiedzających. Każda wersja przeglądarki prezentowana jest osobno."
