--- a/plugins/DevicesDetection/lang/tr.json
+++ b/plugins/DevicesDetection/lang/tr.json
@@ -47,6 +47,7 @@
         "Phablet": "Phablet",
         "TV": "TV",
         "UserAgent": "User-Agent",
+        "MobileApp": "Mobil Uygulama",
         "XVisitsFromDevices": "%2$s aygıttan %1$s ziyaret",
         "Wearable": "Giyilebilir",
         "WidgetBrowsers": "Ziyaretçi Tarayıcısı",
