--- a/plugins/DevicesDetection/lang/uk.json
+++ b/plugins/DevicesDetection/lang/uk.json
@@ -43,6 +43,7 @@
         "Phablet": "Фаблет",
         "TV": "ТВ",
         "UserAgent": "User-Agent",
+        "MobileApp": "Мобільний Додаток",
         "XVisitsFromDevices": "%1$s візитів з %2$s пристроїв",
         "WidgetBrowsers": "Браузери відвідувачів",
         "WidgetBrowsersDocumentation": "Цей звіт містить інформацію по браузерам, які використовують ваші відвідувачі. Кожна версія браузера відображається окремо."
