--- a/plugins/Ecommerce/lang/pt.json
+++ b/plugins/Ecommerce/lang/pt.json
@@ -5,6 +5,10 @@
         "Order": "Pedido",
         "OrderId": "ID do pedido",
         "Orders": "Pedidos",
+        "ViewedProductCategory": "Categoria do Produto Visualizada",
+        "ViewedProductName": "Nome do Produto Visualizado",
+        "ViewedProductPrice": "Preço do Produto Visualizado",
+        "ViewedProductSKU": "SKU do Produto Visualizado",
         "SalesBy": "Vendas por %s",
         "SalesAdjective": "%s vendas",
         "NumberOfItems": "Número de itens no carrinho",
