--- a/plugins/Installation/lang/de.json
+++ b/plugins/Installation/lang/de.json
@@ -149,6 +149,6 @@
         "WelcomeToCommunity": "Willkommen in der Matomo Community!",
         "CannotConnectToDb": "Verbindung zur Datenbank ist fehlgeschlagen",
         "CannotConnectToDbResolvingExplanation": "Dies könnte ein temporäres Problem sein. Versuchen Sie diese %1$sSeite neu zu laden%2$s. Wenn das Problem weiterhin besteht, wenden Sie sich bitte an Ihren Matomo Administrator.",
-        "EmailPrivacyNotice": "Ihre E-Mail-Adresse wird nur dafür verwendet, Ihnen den Newsletter zu senden. Dafür werden wir sie an einen Third-Party-Provider weitergeben. Dieser Provider ist aktuell Mad Mimi, aber das wird in Zukunft möglicherweise ändern. Wir werden Ihre E-Mail-Adresse sonst mit niemandem teilen oder sie für etwas anderes als für den Newsletter verwenden. Sie können sich jederzeit abmelden. Bitte konsultieren Sie unsere %1$sDatenschutzerklärung%2$s für weitere Informationen."
+        "EmailPrivacyNotice": "Ihre E-Mail-Adresse wird nur dafür verwendet, Ihnen den Newsletter zu senden. Dafür werden wir sie an einen Third-Party-Provider weitergeben. Dieser Provider ist aktuell Mad Mimi, aber das wird sich in Zukunft möglicherweise ändern. Wir werden Ihre E-Mail-Adresse sonst mit niemandem teilen oder sie für etwas anderes als für den Newsletter verwenden. Sie können sich jederzeit abmelden. Bitte konsultieren Sie unsere %1$sDatenschutzerklärung%2$s für weitere Informationen."
     }
 }
