--- a/plugins/VisitTime/lang/cs.json
+++ b/plugins/VisitTime/lang/cs.json
@@ -5,8 +5,19 @@
         "ColumnLocalMinute": "Místní čas - minuta (začátek návštěvy)",
         "ColumnServerTime": "Čas na serveru",
         "ColumnServerHour": "Čas na serveru - hodina",
+        "ColumnVisitEndServerHour": "Čas na serveru - hodina (Čas poslední akce)",
+        "ColumnVisitEndServerMinute": "Čas na serveru - minuta (Čas poslední akce)",
         "ColumnVisitStartServerHour": "Čas na serveru - hodina (Začátek návštěvy)",
         "ColumnVisitStartServerMinute": "Čas na serveru - minuta (Začátek návštěvy)",
+        "ColumnVisitEndServerDate": "Čas na serveru - datum (Čas poslední akce)",
+        "ColumnVisitEndServerDayOfMonth": "Čas na serveru - den v měsíci (Čas poslední akce)",
+        "ColumnVisitEndServerDayOfWeek": "Čas na serveru - den v týdnu (Čas poslední akce)",
+        "ColumnVisitEndServerDayOfYear": "Čas na serveru - den v roce (Čas poslední akce)",
+        "ColumnVisitEndServerQuarter": "Čas na serveru - čtvrtletí (Čas poslední akce)",
+        "ColumnVisitEndServerSecond": "Čas na serveru - vteřin (Čas poslední akce)",
+        "ColumnVisitEndServerWeekOfYear": "Čas na serveru - týden v roce (Čas poslední akce)",
+        "ColumnVisitEndServerMonth": "Čas na serveru - měsíc (Čas poslední akce)",
+        "ColumnVisitEndServerYear": "Čas na serveru - rok (Čas poslední akce)",
         "ColumnServerMinute": "Čas na serveru - minuta",
         "DayOfWeek": "Dny v týdnu",
         "LocalTime": "Návštěvy podle lokálního času",
