--- a/plugins/VisitTime/lang/pt.json
+++ b/plugins/VisitTime/lang/pt.json
@@ -5,8 +5,19 @@
         "ColumnLocalMinute": "Hora local - minuto (início da visita)",
         "ColumnServerTime": "Hora do servidor",
         "ColumnServerHour": "Hora do servidor - hora",
+        "ColumnVisitEndServerHour": "Tempo do servidor - hora (Tempo da última ação)",
+        "ColumnVisitEndServerMinute": "Tempo do servidor - minuto (Tempo da última ação)",
         "ColumnVisitStartServerHour": "Hora do servidor - hora (início da visita)",
         "ColumnVisitStartServerMinute": "Hora do servidor - minuto (início da visita)",
+        "ColumnVisitEndServerDate": "Tempo do servidor - data (Tempo da última ação)",
+        "ColumnVisitEndServerDayOfMonth": "Tempo do servidor - dia do mês (Tempo da última ação)",
+        "ColumnVisitEndServerDayOfWeek": "Tempo do servidor - dia da semana (Tempo da última ação)",
+        "ColumnVisitEndServerDayOfYear": "Tempo do servidor - dia do ano (Tempo da última ação)",
+        "ColumnVisitEndServerQuarter": "Tempo do servidor - quarto de hora (Tempo da última ação)",
+        "ColumnVisitEndServerSecond": "Tempo do servidor - segundo (Tempo da última ação)",
+        "ColumnVisitEndServerWeekOfYear": "Tempo do servidor - semana do ano (Tempo da última ação)",
+        "ColumnVisitEndServerMonth": "Tempo do servidor - mês (Tempo da última ação)",
+        "ColumnVisitEndServerYear": "Tempo do servidor - ano (Tempo da última ação)",
         "ColumnServerMinute": "Hora do servidor - minuto",
         "DayOfWeek": "Dia da semana",
         "LocalTime": "Visitas por hora local",
