--- a/lang/it.json
+++ b/lang/it.json
@@ -133,7 +133,10 @@
         "DaysHours": "%1$s giorni %2$s ore",
         "DaysSinceFirstVisit": "Giorni trascorsi dalla prima visita",
         "DaysSinceLastEcommerceOrder": "Giorni dall'ultimo ordine Ecommerce",
+        "SecondsSinceLastEcommerceOrder": "Secondi trascorsi dall'ultimo ordine Ecommerce",
         "DaysSinceLastVisit": "Giorni trascorsi dall'ultima visita",
+        "SecondsSinceLastVisit": "Secondi trascorsi dall'ultima visita",
+        "SecondsSinceFirstVisit": "Secondi trascorsi dalla prima visita",
         "Default": "Default",
         "DefaultAppended": "(default)",
         "Delete": "Cancella",
