--- a/plugins/API/lang/pt.json
+++ b/plugins/API/lang/pt.json
@@ -1,13 +1,13 @@
 {
     "API": {
         "ChangeTokenHint": "Se quiser alterar este código, por favor, aceda à sua %1$spágina de definições pessoais%2$s.",
-        "GenerateVisits": "Se não tiver dados para hoje pode começar por gerar alguns através da extensão %1$s. Pode ativar a extensão %2$s e depois clicar no menu 'Gerador de visitantes' na área de Administração do Matomo.",
-        "KeepTokenSecret": "Este token_auth é tão secreto como o seu nome de utilizador e palavra-passe. %1$s não o partilhe%2$s!",
+        "GenerateVisits": "Se não tem dados para hoje, pode gerar primeiro alguns utilizando a extensão %1$s. Pode ativar a extensão %2$s e depois clicar no menu 'Gerador de Visitante' na área de «Administração» do Matomo.",
+        "KeepTokenSecret": "Este token_auth é tão secreto como o seu nome de utilizador e a palavra-passe. %1$s não o partilhe%2$s!",
         "LoadedAPIs": "%s APIs carregadas com sucesso",
         "MoreInformation": "Para mais informação sobre as APIs do Matomo, por favor dê uma vista de olhos na %1$s Introdução à API do Matomo %2$s e a %3$s referência da API do Matomo %4$s.",
         "PluginDescription": "Todos os dados no Matomo estão disponíveis através de APIs simples. Esta extensão é o ponto de entrada do web service que pode invocar para obter os seus dados em xml, json, php, csv, etc.",
         "ReportingApiReference": "Referência da API de relatórios",
-        "TopLinkTooltip": "Aceda programaticamente à sua informação através de uma simples API em json, xml, etc.",
+        "TopLinkTooltip": "Aceda aos seus dados da «Analítica da Web» programaticamente por meio de uma API simples em json, xml, etc.",
         "UserAuthentication": "Autenticação do utilizador",
         "Glossary": "Glossário",
         "LearnAboutCommonlyUsedTerms2": "Saber mais sobre os termos mais utilizados para obter o máximo do Matomo Analytics.",
