--- a/plugins/DevicesDetection/lang/el.json
+++ b/plugins/DevicesDetection/lang/el.json
@@ -47,6 +47,11 @@
         "Phablet": "Phablet",
         "TV": "Τηλεόραση",
         "UserAgent": "Πρόγραμμα πελάτη χρήστη",
+        "Library": "Βιβλιοθήκη",
+        "FeedReader": "Αναγνώστης Ροών",
+        "MobileApp": "Εφαρμογή για κινητά",
+        "Pim": "PIM",
+        "MediaPlayer": "Συσκευή Αναπαραγωγής",
         "XVisitsFromDevices": "%1$s επισκέψεις από %2$s συσκευές",
         "Wearable": "Φορέσιμος",
         "WidgetBrowsers": "Φυλλομετρητές επισκεπτών",
