--- a/plugins/DevicesDetection/lang/hi.json
+++ b/plugins/DevicesDetection/lang/hi.json
@@ -21,6 +21,7 @@
         "DeviceBrand": "डिवाइस ब्रांड",
         "OperatingSystemFamily": "आपरेटिंग सिस्टम परिवार",
         "OperatingSystems": "आपरेटिंग सिस्टम",
+        "MobileApp": "मोबाइल एप्लिकेशन",
         "WidgetBrowsers": "आगंतुक ब्राउज़र"
     }
 }
