--- a/plugins/DevicesDetection/lang/ja.json
+++ b/plugins/DevicesDetection/lang/ja.json
@@ -47,6 +47,7 @@
         "Phablet": "ファブレット",
         "TV": "TV",
         "UserAgent": "ユーザーエージェント",
+        "MobileApp": "モバイルアプリ",
         "XVisitsFromDevices": "%2$s デバイスからの %1$s ビジット",
         "WidgetBrowsers": "ブラウザ",
         "WidgetBrowsersDocumentation": "ビジターが使用しているブラウザについてのリポートです。各ブラウザのバージョンは別途記載されています。"
