--- a/plugins/DevicesDetection/lang/pt-br.json
+++ b/plugins/DevicesDetection/lang/pt-br.json
@@ -47,6 +47,7 @@
         "Phablet": "Phablet",
         "TV": "Tv",
         "UserAgent": "User-Agent",
+        "MobileApp": "Aplicativo móvel",
         "XVisitsFromDevices": "%1$s visitas de %2$s dispositivos",
         "WidgetBrowsers": "Navegador dos Visitantes",
         "WidgetBrowsersDocumentation": "Este relatório contém informações sobre o tipo de navegador que os visitantes estavam usando. Cada versão do navegador é listada separadamente."
