--- a/plugins/DevicesDetection/lang/ru.json
+++ b/plugins/DevicesDetection/lang/ru.json
@@ -43,6 +43,7 @@
         "Phablet": "Фаблет",
         "TV": "ТВ",
         "UserAgent": "User-Agent",
+        "MobileApp": "Мобильное приложение",
         "XVisitsFromDevices": "%1$s посещений с %2$s устройств",
         "WidgetBrowsers": "Браузер посетителя",
         "WidgetBrowsersDocumentation": "Этот отчёт содержит информацию по браузерам, которые используют ваши посетители. Каждая версия браузера отображается отдельно."
