--- a/plugins/DevicesDetection/lang/sr.json
+++ b/plugins/DevicesDetection/lang/sr.json
@@ -38,6 +38,7 @@
         "Phablet": "Fablet",
         "TV": "TV",
         "UserAgent": "Korisnički agent",
+        "MobileApp": "Mobilna aplikacija",
         "WidgetBrowsers": "Brauzeri posetilaca",
         "WidgetBrowsersDocumentation": "Ovaj izveštaj prikazuje koje brauzere koriste vaši posetioci. Svaka verzija brauzera je prikazana posebno."
     }
