--- a/plugins/DevicesDetection/lang/zh-tw.json
+++ b/plugins/DevicesDetection/lang/zh-tw.json
@@ -47,6 +47,7 @@
         "Phablet": "平板手機",
         "TV": "電視",
         "UserAgent": "User Agent",
+        "MobileApp": "行動應用程式",
         "XVisitsFromDevices": "來自%2$s裝置的%1$s個訪問數",
         "WidgetBrowsers": "訪客瀏覽器",
         "WidgetBrowsersDocumentation": "這份報表包含訪客所使用的瀏覽器資訊。每個瀏覽器的版本都會分開排列。"
