--- a/plugins/Marketplace/lang/pt.json
+++ b/plugins/Marketplace/lang/pt.json
@@ -84,8 +84,8 @@
         "SortByAlpha": "Alfabeticamente",
         "SortByLastUpdated": "Atualizados recentemente",
         "SortByPopular": "Popular",
-        "StepDownloadingPluginFromMarketplace": "A transferir extensão da loja",
-        "StepDownloadingThemeFromMarketplace": "A transferir tema da loja",
+        "StepDownloadingPluginFromMarketplace": "A transferir a extensão da loja",
+        "StepDownloadingThemeFromMarketplace": "A transferir o tema da loja",
         "StepUnzippingPlugin": "A extrair a extensão",
         "StepUnzippingTheme": "A extrair o tema",
         "StepThemeSuccessfullyInstalled": "Instalou com sucesso o tema %1$s %2$s.",
