--- a/plugins/PrivacyManager/lang/it.json
+++ b/plugins/PrivacyManager/lang/it.json
@@ -10,8 +10,10 @@
         "ConsentExplanation": "Consenso significa offrire alle singole persone la scelta e il controllo su come vengono trattati i loro dati personali.",
         "ClickHereSettings": "Accedi alle impostazioni %s.",
         "WhenDoINeedConsent": "Quando devi richiedere il consenso dell'utente?",
+        "WhenConsentIsNeeded1": "Nel contesto delle %1$snorme sulla privacy del GDPR%2$s, quando si elaborano dati personali, in alcuni casi è necessario richiedere il consenso degli utenti. Per stabilire se è necessario richiedere il consenso, è necessario determinare se la base legale per l'elaborazione dei dati personali è il Consenso o l'Interesse legittimo o se è possibile evitare completamente la raccolta di dati personali. Raccomandiamo di saperne di più sulla %3$sbase legale ai sensi del GDPR per Matomo%4$s.",
         "WhenConsentIsNeeded2": "Tieni presente che quando chiedi il consenso ai tuoi utenti e se non riesci a dimostrare di aver ottenuto il \"Consenso\" dei tuoi utenti in passato, ti consigliamo di %1$srendere anonimi i dati grezzi dei tuoi utenti precedentemente monitorati%2$s.",
         "HowDoIAskForConsent": "Come devo chiedere il consenso agli utenti?",
+        "HowDoIAskForConsentIntroduction": "Scopri tutto sulla %1$srichiesta di cookie o il consenso al monitoraggio nella nostra guida all'integrazione%2$s.",
         "AnonymizeSites": "Rendi anonimi i dati di questo sito",
         "AnonymizeRowDataFrom": "Rendi anonimi tutti i dati grezzi a partire da:",
         "AnonymizeRowDataTo": "Rendi anonimi tutti i dati grezzi fino a:",
@@ -20,7 +22,7 @@
         "AnonymizeLocation": "Rendi anonima la Posizione",
         "AnonymizeLocationHelp": "Questa azione non può essere annullata. Rivaluta la posizione in base all'IP anonimo (almeno 2 byte dell'IP saranno resi anonimi).",
         "AnonymizeUserId": "Sostituisci l'ID Utente con uno pseudonimo",
-        "AnonymizeUserIdHelp": "Quando si abilita questa opzione, l'ID utente verrà sostituito da uno pseudonimo per evitare di archiviare e visualizzare direttamente informazioni di identificazione personali come un indirizzo email. In termini tecnici: dato il tuo ID utente, Matomo elaborerà lo pseudonimo dell'ID utente utilizzando una funzione hash \"salata\". <br\/><br\/><em>Nota: la sostituzione con uno pseudonimo non è la stessa cosa dell'anonimizzazione. In termini di GDPR: lo pseudonimo di ID utente conta ancora come se fosse un dato personale. L'ID utente originale potrebbe ancora essere identificato se sono disponibili determinate informazioni aggiuntive (a cui solo Matomo e il tuo elaboratore di dati hanno accesso).<\/em>",
+        "AnonymizeUserIdHelp": "Quando si abilita questa opzione, l'ID utente verrà sostituito da uno pseudonimo per evitare di archiviare e visualizzare direttamente informazioni personali identificabili, come un indirizzo email. In termini tecnici: dato il tuo ID utente, Matomo elaborerà lo pseudonimo dell'ID utente utilizzando una funzione hash \"salata\". <br\/><br\/><em>Nota: la sostituzione con uno pseudonimo non è la stessa cosa dell'anonimizzazione. In termini di GDPR: lo pseudonimo di ID utente conta ancora come se fosse un dato personale. L'ID utente originale potrebbe ancora essere identificato se sono disponibili determinate informazioni aggiuntive (a cui solo Matomo e il tuo elaboratore di dati hanno accesso).<\/em>",
         "AnonymizeProcessInfo": "Questa azione potrebbe richiedere molto tempo e pertanto non verrà eseguita immediatamente. Sarai in grado di seguire lo stato del processo qui sotto. L'anonimizzazione dovrebbe in genere iniziare entro un'ora.",
         "AnonymizeDataNow": "Rendi anonimi i dati passati per il sito e il periodo selezionati",
         "AnonymizeDataConfirm": "Sei sicuro di voler rendere anonimi i dati per i siti web e l'intervallo di tempo selezionati? Questa azione non può essere annullata, i dati possono essere eliminati come richiesto e questo processo potrebbe richiedere molto tempo.",
@@ -37,7 +39,7 @@
         "CurrentDBSize": "Dimensione corrente del database",
         "DataRetention": "Conservazione dei dati",
         "DataRetentionInMatomo": "Conservazione dei dati per i dati immagazzinati in Matomo:",
-        "DataRetentionOverall": "Il tasso generale di conservazione dei dati per la vostra politica sulla privacy è il tasso di conservazione dei dati non elaborati. Si noti che anche i report aggregati possono contenere dati personali. Se stai utilizzando funzionalità come ID utente, variabili personalizzate, dimensione personalizzata o tracci i dati personali in altri modi come eventi, URL di pagina o titoli di pagina, ecc., Il tasso di conservazione dei dati complessivo per la tua politica sulla privacy è il più alto tra i due .",
+        "DataRetentionOverall": "Il tasso generale di conservazione dei dati per la vostra politica sulla privacy è il tasso di conservazione dei dati non elaborati. Si noti che anche i report aggregati possono contenere dati personali. Se stai utilizzando funzionalità come ID utente, variabili personalizzate, dimensione personalizzata o tracci i dati personali in altri modi come eventi, URL di pagina o titoli di pagina, ecc., il tasso di conservazione dei dati complessivo per la tua politica sulla privacy è il più alto tra i due .",
         "RawDataRemovedAfter": "tutte le righe di dati visite e azioni vengono eliminate a partire da %1$s.",
         "RawDataNeverRemoved": "le righe di dati visite e azioni <strong>non<\/strong> vengono mai eliminate.",
         "ReportsRemovedAfter": "tutti i report aggregati vengono eliminati a partire da %1$s.",
